--- a/src/app/bnode-sequence/bnode-sequence.component.html
+++ b/src/app/bnode-sequence/bnode-sequence.component.html
@@ -1,13 +1,16 @@
 <span class="pointer">
-  <mat-icon matTooltip='Back to Roota' (click)="reset()">home</mat-icon>
-
+  <mat-icon matTooltip='Back to Root' (click)="reset()">home</mat-icon>
   </span>
+
 <div class="b-bidding-sequence">
-  <span>&nbsp;</span>
+  <table>
+
+  </table>
+
   <span *ngFor="let bnc of bNodeSequence.compositeNodes; let i = index" (click)="selectBid(bnc)">
 
  <span class="pointer" [ngClass]="{'underlined': bnc == bNodeSequence.indexNode,
-                 'opp': bnc.bnode.ob}"   matTooltip="{{bnc.contextualizedCondition}}">
+                 'opp': bnc.bnode.ob}" matTooltip="{{bnc.contextualizedCondition}}">
  <app-strain-symbol [strain]="bNodeSequence.compositeNodes[i].bid"></app-strain-symbol>
  </span>&nbsp;
     <span *ngIf="i<bNodeSequence.compositeNodes.length-1  && bnc.bid !== 'opening'">-</span>
