--- a/src/app/bnode-sequence/bnode-sequence.component.html
+++ b/src/app/bnode-sequence/bnode-sequence.component.html
@@ -22,9 +22,9 @@
 <span style="padding-left: 2em;float: right">
 
   <span (click)="generateRandomSequenceFromIndex()" class="pointer" matTooltip="Generate Random Sequence">
-    ↝
+    <mat-icon>upcoming</mat-icon>
   </span>
   <span *ngIf="bNodeSequence.isRealBiddingSequence" (click)="emitSequence()"
         class="pointer">
-    <mat-icon matTooltip="Generate Hands">preview</mat-icon></span>
+    <mat-icon matTooltip="Generate Hands">send</mat-icon></span>
  </span>
